# ImageTransformer

./: .gitignore  CMakeLists.txt  README.md  calculateTransformedImage.cpp  calculateTransformedImage.h  main.cpp  qml.qrc
qml/: Main.qml
